--- a/actix-plus-auth/Cargo.toml
+++ b/actix-plus-auth/Cargo.toml
@@ -14,3 +14,8 @@ rand = "0.8.3"
 regex = "1.4.5"
 once_cell = "1.7.2"
 jsonwebtoken = "7.2.0"
+
+[dev-dependencies]
+actix-plus-static-files = { path = "../actix-plus-static-files" }
+actix-web = { version = "3.3.2", features = ["openssl"] }
+openssl = { version = "0.10", features = ["v110"] }
