--- a/actix-plus-utils/Cargo.toml
+++ b/actix-plus-utils/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["john01dav <john01dav@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+actix-plus-error = { path = "../actix-plus-error" }
+actix-web = "3.3.2"
+unic-ucd-category = "0.9.0"
+rand = "0.7.3"
