Actix-plus-auth is now async

--- a/actix-plus-auth/Cargo.toml
+++ b/actix-plus-auth/Cargo.toml
@@ -14,6 +14,7 @@ rand = "0.8.3"
 regex = "1.4.5"
 once_cell = "1.7.2"
 jsonwebtoken = "7.2.0"
+async-trait = "0.1.48"
 
 [dev-dependencies]
 actix-plus-static-files = { path = "../actix-plus-static-files" }
