--- a/actix-plus-error/Cargo.toml
+++ b/actix-plus-error/Cargo.toml
@@ -3,6 +3,12 @@ name = "actix-plus-error"
 version = "0.1.0"
 authors = ["john01dav <john01dav@gmail.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
+description = "A library that integrates with actix-web to provide a ResponsError type (and associated traits) to cleanly propogate errors of all kinds in the context of an actix-web application"
+homepage = "https://github.com/john01dav/actix-plus"
+documentation = "https://docs.rs/actix-plus-error"
+repository = "https://github.com/john01dav/actix-plus"
+readme = "README.md"
 
 [dependencies]
 actix-web = "3.3.2"
