Improved documentation and changed actix-plus-auth to MIT or Apache 2.0 license

--- a/actix-plus-auth/Cargo.toml
+++ b/actix-plus-auth/Cargo.toml
@@ -3,7 +3,7 @@ name = "actix-plus-auth"
 version = "0.0.1"
 authors = ["john01dav <john01dav@gmail.com>"]
 edition = "2018"
-license = "AGPL-3.0-or-later"
+license = "MIT OR Apache-2.0"
 description = "A library that integrates with actix-web to provide structure and implementation of authentication in an opinionated but still highly flexible way"
 homepage = "https://github.com/john01dav/actix-plus"
 documentation = "https://docs.rs/actix-plus-auth"
