--- a/actix-plus-static-files/Cargo.toml
+++ b/actix-plus-static-files/Cargo.toml
@@ -15,7 +15,7 @@ repository = "https://github.com/john01dav/actix-plus"
 readme = "README.md"
 
 [dependencies]
-actix-web = { version = "4.0.0-rc.1", default-features = false }
+actix-web = { version = "4.0", default-features = false }
 actix-service = { version = "2.0", default-features = false }
 mime_guess = "2.0"
 path-slash = "0.1"
